@@ -1,3 +1,9 @@
+2007-02-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-02-11
+	* provide empty stopAction, according to changes to
+	Utilities/EPStateMachine.
+	
 2006-11-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-02-10
